# liquid-spec

./: .gitignore  .rubocop.yml  .rubocop_todo.yml  AGENTS.md  CLAUDE.md  COMPLEXITY.md  Cargo.toml  Gemfile  LICENSE.txt  Makefile  QUIRKS.md  README.md  Rakefile  SPECS.md  WARTS.md  broken.yml  dev.yml  liquid-spec.gemspec  liquid_adapter.rb  service.yml  shipit.yml  vm.yml
.beads/: README.md  issues.jsonl
.shopify-build/: liquid-spec-publish-package.yml
.spin/: ruby.yml
crates/liquid-spec-cli/: Cargo.toml
crates/liquid-spec-cli/src/: adversarial.rs  benchmark.rs  config.rs  docs.rs  eval.rs  main.rs  report.rs  session.rs
crates/liquid-spec-cli/tests/: cli_test.rs
crates/liquid-spec-core/: Cargo.toml
crates/liquid-spec-core/src/: lib.rs  spec.rs
docs/: filter_matrix_quirks.md  json-rpc-protocol-v2-vectors.json  json-rpc-protocol-v2.md  json-rpc-protocol-v2.schema.json  json-rpc-protocol.md  json-rpc-type-transport.md  ruby_hash_inspect_format.md  test_drops.md  truthiness.md
examples/: json_rpc_ruby_liquid.rb  liquid_c.rb  liquid_c_strict.rb  liquid_ruby.rb  liquid_ruby_activesupport.rb  liquid_ruby_jsonrpc_v2.rb  liquid_ruby_lax.rb  liquid_ruby_lax_activesupport.rb  liquid_ruby_shopify.rb  liquid_ruby_strict.rb  liquid_ruby_strict_activesupport.rb  liquid_ruby_yjit.rb  liquid_ruby_zjit.rb
prev_specs/: multi_byte.yml
scripts/: extract_lax_specs.rb  generate_date_strftime_spec.rb  generate_escape_spec.rb  generate_math_coercion_spec.rb  generate_spec_hint_baseline.rb  generate_theme_database.rb  generate_url_encode_spec.rb  move_spec.rb  normalize_error_specs.rb  (+4 more)
(+474 files in other folders)
