[workspace]
members = [
  "crates/liquid-spec-protocol",
  "crates/liquid-spec-core",
  "crates/liquid-spec-cli",
]
resolver = "2"

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/Shopify/liquid-spec"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
toml = "0.9"

