[package]
name = "liquid-spec-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "liquid-spec"
path = "src/main.rs"

[[bin]]
name = "liquid-spec-test-server"
path = "src/bin/test_server.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
liquid-spec-core = { path = "../liquid-spec-core" }
liquid-spec-protocol = { path = "../liquid-spec-protocol" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
