[package]
name = "liquid-spec-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
glob.workspace = true
liquid-spec-protocol = { path = "../liquid-spec-protocol" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
